syntax = "proto3";

package user;

service UserService {
  rpc HandleUserCreated (ClerkUserData) returns (ClerkWebhookResponse) {}
  rpc HandleUserDeleted (ClerkUserData) returns (ClerkWebhookResponse) {}
  rpc HandleSubscriptionCreated (RevenueCatSubscriptionData) returns (SubscriptionCreatedResponse) {}
  rpc GetUserVendors (UserVendorData) returns (UserVendorsResponse) {}
}

// Service Function Types

message ClerkUserData {
    string id = 1;
}

message ClerkWebhookResponse {
    string message = 1;
}

message RevenueCatSubscriptionData {
    string clerkUserId = 1;
    string providerId = 2;
    string data = 3; // JSON string
}

message SubscriptionCreatedResponse {
    string message = 1;
}

message UserVendorData {
    string userId = 1;
}

message UserVendorsResponse {
    repeated UserVendor vendors = 1;
}

// Helper Types
message UserVendor {
    string id = 1;
    string name = 2;
}

message Empty {

} 